# pharos-seti-data

./: .gitignore  CITATION.cff  LICENSE  LICENSE-DATA  README.md  RELEASE_NOTES_v0.1.0.md  manuscript.md  pyproject.toml
controls/: hephaistos.yaml
controls/cache/: hephaistos_join.parquet  quiet_negative.parquet
controls/cache/xray/: xray_matches.parquet  xray_summary.parquet
controls/contaminant_positive/: contaminants.parquet  manifest.yaml
controls/fdr_report/: fdr_rows.parquet  fdr_summary.csv
controls/synthetic_injection/: injection_rows.parquet  injection_summary.csv
docs/: model_card.md
pre_registration/: FROZEN.md  v0.1.1_calibrated_betas_and_xray_hot_dog.md  v0.1_ir_benchmark.md
pre_registration/failed_attempts/: v0.1.1_attempt1_calibrated_betas.yaml  v0.1.1_attempt1_failure_record.md
src/pharos/: __init__.py  calibrate.py  calibration.py  cli.py  confounders.py  contaminants.py  fdr_report.py  injection.py  ir_sed.py  sources.py  xray.py
tests/: test_calibrate.py  test_calibration.py  test_confounders.py  test_hephaistos_demotion.py  test_sources.py
