[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharos"
version = "0.1.0"
description = "A cross-modal archival SETI ranking framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pharos maintainers" },
]
license = { text = "Apache-2.0" }
keywords = ["seti", "technosignatures", "astronomy", "archival", "gaia", "wise"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://pharos-seti.org"
Repository = "https://github.com/geeknik/pharos-seti-data"
Manuscript = "https://pharos-seti.org/manuscript"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
